fix app min width causing background color to cut off

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,7 @@ html {
 }
 
 .app {
+  min-width: 900px;
   background: white;
 }
 
